--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,13 @@ body {
   padding: 0;
   font-family: 'Titillium Web', sans-serif;
 }
+
+.Toastify__toast {
+  border-radius: 6px;
+  padding: 1.2rem;
+}
+
+.Toastify__toast-body {
+  font-family: 'Titillium Web', sans-serif;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, .2);
+}
